# lesser

./: Cargo.toml  README.md
.github/workflows/: CI.yml  rust.yml
src/: less.rs  main.rs  reader.rs
src/less/: formats.rs  mod.rs  reader.rs  screen_move_handler.rs
src/lesser/: formats.rs  mod.rs  reader.rs  screen_move_handler.rs
