[package]
name = "lesser"
version = "0.1.0"
authors = ["Federico Ponzi <federico.ponzi92@gmail.com>"]
edition = "2018"

[dependencies]
termion = "~1.5"
clap = { git="https://github.com/clap-rs/clap.git", version="3.0.0-beta.1" }
memmap = "~0.7"
log = "~0.4"
env_logger = "~0.7"
crossbeam-channel = "~0.4"
signal-hook = "~0.1"
tempdir = "~0.3"